<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_patient"
            android:icon="@drawable/user_24"
            android:title="@string/nav_patient" />
<!--        <item
            android:id="@+id/nav_dash"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="pSOFA Dashboard" />-->
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_24"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/exit"
            android:title="Logout" />
    </group>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/baseline_help_white_18dp"
                android:title="@string/nav_help" />
<!--            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />-->
        </menu>
    </item>
<group>
<item android:title="pSOFA v1.0" />
</group>

</menu>
