<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterPatientActivity">

    <include
        layout="@layout/app_bar_nav"
        android:background="@color/design_default_color_secondary" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/patient_scroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/patient_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:adjustViewBounds="false"
                android:background="@drawable/baby"
                android:backgroundTint="@color/colorOrange"
                android:contentDescription="Patient"
                app:layout_constraintBottom_toTopOf="@+id/patient_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread_inside" />

            <EditText
                android:id="@+id/patient_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/prompt_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="14sp"
                android:typeface="sans"
                app:layout_constraintBottom_toTopOf="@+id/patient_age"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/patient_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/prompt_age"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="14sp"
                android:typeface="sans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/patient_name"
                tools:targetApi="o" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_margin="10dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/patient_age">

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:buttonTint="@color/colorAccent"
                    android:fontFamily="sans-serif"
                    android:text="@string/male_radio"
                    android:typeface="sans" />

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/female_radio"
                    android:typeface="sans" />
            </RadioGroup>


            <Switch
                android:id="@+id/p_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif"
                android:switchMinWidth="56dp"
                android:switchPadding="30dp"
                android:text="Provide Clinical Details"
                android:textSize="14sp"
                android:thumbTint="@color/colorAccent"
                android:typeface="sans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.067"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <Spinner
                android:id="@+id/days_spinner"
                style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="@color/browser_actions_bg_grey"
                android:minWidth="@dimen/activity_vertical_margin"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/patient_register_button"
                app:layout_constraintTop_toBottomOf="@+id/p_switch" />

            <Button
                android:id="@+id/patient_register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/patient_register_button_text"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:tooltipText="Register Patient's details"
                android:typeface="sans"
                app:backgroundTint="@color/design_default_color_primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/days_spinner"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>